# py_ds_hw_1

./: Dockerfile  README.md  contacts.txt  pyproject.toml
src/py_ds_hw_1/: __init__.py
